fix broken input submit (#792)
* smoothly-input-submit: add another state to prevent overriding

* keep demo unchanged

* keep demo unchanged

* add pointer-events as none so none will happen when the button is disabled

* if set delete to true, the button is always active

--- a/src/components/confirm/style.css
+++ b/src/components/confirm/style.css
@@ -3,6 +3,7 @@
 }
 :host([disabled]) {
 	opacity: 0.5;
+	pointer-events: none;
 }
 :host:not([warning]) > smoothly-button:first-child {
 	display: none;
